--- a/src/content/bio/0.mdx
+++ b/src/content/bio/0.mdx
@@ -5,13 +5,13 @@ cover: /avatar.webp
 order: 0
 ---
 
-Hi, I’m **Khaya** 👋 a full-stack engineer in training. I was born in November. 🍁
+Hi, I’m **Khaya** 👋 a full-stack engineer. I was born in November. 🍁
 
 **Fun fact:** my brother is one year younger than me, we're both born in month, wait for it… on the same day!
 
 I’m currently working at a devtools startup called [Snaplet](https://www.snaplet.dev/). Using AI, to make it easy & safe for teams to work with production data, in their dev environments.
 
-I’ll be honest, I don’t have it figure out (life), but having fun, with the intention of getting there.
+I'll be honest, I haven't figured out everything, but hoping to have fun, with the intention of getting there.
 
 I hope my personal website helps you learn about my travels (a short but sweet list 😂), concerts & taste in music and finally my sometimes uneducated perspective of Africa, building tools and I guess life.
 
