--- a/src/content/bio/0.mdx
+++ b/src/content/bio/0.mdx
@@ -5,14 +5,8 @@ cover: /avatar.webp
 order: 0
 ---
 
-Hi, I’m **Khaya** 👋 a full-stack engineer. I was born in November. 🍁
+Hi, my name Khaya 👋 a full-stack typescript from Johannesburg.
 
-**Fun fact:** my brother is one year younger than me, we're both born in month, wait for it… on the same day!
+I've developed a love for South African comedy, heavy indoor football player and just like those [basketball players obssesed with lego](https://www.youtube.com/watch?v=YbJ74aWdB9A), I enjoy writing code in my free-time 😅
 
-I’m currently working at a devtools startup called [Snaplet](https://www.snaplet.dev/). Using AI, to make it easy & safe for teams to work with production data, in their dev environments.
-
-I'll be honest, I haven't figured out everything, but hoping to have fun, with the intention of getting there.
-
-I hope my personal website helps you learn about my travels (a short but sweet list 😂), concerts & taste in music and finally my sometimes uneducated perspective of Africa, building tools and I guess life.
-
-**Welcome.**
+This is my personal website, Welcome 🤞🏾
