--- a/src/content/bio/2.mdx
+++ b/src/content/bio/2.mdx
@@ -1,8 +1,6 @@
 ---
-title: "2022"
-subtitle: Humble Beginnings
-cover: /bio/2022.png
+title: "2023"
+subtitle: Mmmm
+cover: /bio/2023.png
 isExpandable: false
 ---
-
-Testing one two three there.
