--- a/src/content/bio/0.mdx
+++ b/src/content/bio/0.mdx
@@ -5,8 +5,8 @@ cover: /avatar.webp
 order: 0
 ---
 
-Hi, my name Khaya 👋 a full-stack typescript from Johannesburg.
+Hi, my name is Khaya 👋🏽, a full-stack TypeScript developer from Johannesburg, South Africa.
 
-I've developed a love for South African comedy, heavy indoor football player and just like those [basketball players obssesed with lego](https://www.youtube.com/watch?v=YbJ74aWdB9A), I enjoy writing code in my free-time 😅
+If I'm not coding you will probably find me watching South African comedy or playing indoor football ⚽️.
 
-This is my personal website, Welcome 🤞🏾
+This is my personal website built with an Astro plugin I wrote called [Builder](https://builder-www-bice.vercel.app/)
